# YT-Insight

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_downloader.py  ytdlp_downloader.py
docs/: ANALYSIS_DEPTH.md  OUTPUT.md  ROADMAP.md  USAGE.md  session-handoff.md
tests/: test_analyzer.py  test_cli.py  test_config.py  test_depth.py  test_estimate.py  test_output.py  test_text_utils.py  test_transcriber.py
yt_insight/: __init__.py  cli.py  estimate.py
yt_insight/analyzer/: __init__.py  base.py  depth.py  llamacpp_local.py  prompts.py
yt_insight/downloader/: __init__.py  ytdlp_downloader.py
yt_insight/output/: __init__.py  console.py  file_writer.py
yt_insight/transcriber/: __init__.py  base.py  faster_whisper_transcriber.py
yt_insight/utils/: __init__.py  config.py  logger.py  text_utils.py
